--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,12 @@
 body {
     margin-top: 20px;
 }
+
+table {
+    border: 2px solid rgb(200, 200, 200);
+    width: 30%;
+}
+
+.point {
+    padding-bottom: 10px;
+}
